[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/player/camera_jogador.gd" type="Script" id=1]

[node name="camera_jogador" type="Camera2D"]
script = ExtResource( 1 )

[node name="tween_zoom" type="Tween" parent="."]

[node name="tween_recuo" type="Tween" parent="."]
[connection signal="tween_all_completed" from="tween_zoom" to="." method="_on_tween_zoom_tween_all_completed"]
